--- a/contacts.html
+++ b/contacts.html
@@ -13,7 +13,7 @@
     <section>
         <nav>
             <a href="index.html">ГЛАВНАЯ</a>
-            <a href="../Web/about-me.html">ОБО МНЕ</a>
+            <a href="about-me.html">ОБО МНЕ</a>
             <a>ПРОЕКТЫ</a>
             <a href="education.html">ОБРАЗОВАНИЕ</a>
             <a href="skills.html">НАВЫКИ</a>
@@ -27,8 +27,8 @@
             <div class="contacts-info">
                 <h2>КОНТАКТЫ</h2>
                 <div class="icons">
-                    <img src="../Web/img/github.svg" alt="github">
-                    <img src="../Web/img/vk.svg" alt="vk">
+                    <img src="img/github.svg" alt="github">
+                    <img src="img/vk.svg" alt="vk">
                 </div>
             </div>
         </div>
