--- a/education.html
+++ b/education.html
@@ -13,11 +13,11 @@
     <section>
         <nav>
             <a href="index.html">ГЛАВНАЯ</a>
-            <a href="../Web/about-me.html">ОБО МНЕ</a>
+            <a href="about-me.html">ОБО МНЕ</a>
             <a>ПРОЕКТЫ</a>
             <a href="education.html">ОБРАЗОВАНИЕ</a>
             <a href="skills.html">НАВЫКИ</a>
-            <a href="../Web/contacts.html">КОНТАКТЫ</a>
+            <a href="contacts.html">КОНТАКТЫ</a>
         </nav>
     </section>
 </header>
