--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
     <section>
         <nav>
             <a href="index.html">ГЛАВНАЯ</a>
-            <a href="../Web/about-me.html">ОБО МНЕ</a>
+            <a href="about-me.html">ОБО МНЕ</a>
             <a>ПРОЕКТЫ</a>
-            <a href="../Web/education.html">ОБРАЗОВАНИЕ</a>
+            <a href="education.html">ОБРАЗОВАНИЕ</a>
             <a href="skills.html">НАВЫКИ</a>
-            <a href="../Web/contacts.html">КОНТАКТЫ</a>
+            <a href="contacts.html">КОНТАКТЫ</a>
         </nav>
     </section>
 </header>
 <main>
     <section>
         <div class="main">
-            <img src="../Web/img/image.svg" alt="image">
+            <img src="img/image.svg" alt="image">
             <div class="name">
                 <h1>Алексей Козлов<br>Начинающий разработчик</h1>
                 <p>Разработка мобильных приложений, машинное обучение,<br>администрирование Windows/Linux</p>
