--- a/skills.html
+++ b/skills.html
@@ -12,12 +12,12 @@
 <header>
     <section>
         <nav>
-            <a href="../Web/index.html">ГЛАВНАЯ</a>
-            <a href="../Web/about-me.html">ОБО МНЕ</a>
+            <a href="index.html">ГЛАВНАЯ</a>
+            <a href="about-me.html">ОБО МНЕ</a>
             <a>ПРОЕКТЫ</a>
-            <a href="../Web/education.html">ОБРАЗОВАНИЕ</a>
+            <a href="education.html">ОБРАЗОВАНИЕ</a>
             <a href="skills.html">НАВЫКИ</a>
-            <a href="../Web/contacts.html">КОНТАКТЫ</a>
+            <a href="contacts.html">КОНТАКТЫ</a>
         </nav>
     </section>
 </header>
