--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="Программирование, студент, ИТМО">
     <meta name="description" content="Сайт начинающего программиста">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <script src="tasks.js" async></script>
 </head>
 <body>
 <header>
@@ -17,29 +18,28 @@
             <a>ПРОЕКТЫ</a>
             <a href="education.html">ОБРАЗОВАНИЕ</a>
             <a href="skills.html">НАВЫКИ</a>
-            <a href="contacts.html">КОНТАКТЫ</a>
+            <!--<a href="contacts.html">КОНТАКТЫ</a>-->
+            <button id="contacts-btn" class="contacts-button">КОНТАКТЫ</button>
+            <div id="dropdown" class="dropdown-contacts">
+                <div class="img">
+                    <a href="https://vk.com/colwhite"><img src="img/vk.svg" alt="vk"> </a>
+                    <a href="https://github.com/OnlyOneUseAcc"><img id="github" src="img/github.svg" alt="github"></a>
+                </div>
+                <span class="close"></span>
+            </div>
         </nav>
     </section>
 </header>
 <main>
     <section>
         <div class="main">
-            <img src="img/image.svg" alt="image">
+            <img id=main-img src="img/image.svg" alt="image">
             <div class="name">
                 <h1>Алексей Козлов<br>Начинающий разработчик</h1>
                 <p>Разработка мобильных приложений, машинное обучение,<br>администрирование Windows/Linux</p>
             </div>
         </div>
     </section>
-    <!--
-
-    <section>
-        <div>
-            <h2>КОНТАКТЫ</h2>
-            <img src="img/github.svg" alt="github">
-            <img src="img/vk.svg" alt="vk">
-        </div>
-    </section>-->
 </main>
 <footer>
     <section>
@@ -48,5 +48,19 @@
         </div>
     </section>
 </footer>
+<script>
+    let drop = document.getElementById("dropdown");
+    let btn = document.getElementById("contacts-btn");
+
+    btn.onclick = function () {
+        drop.style.display = "flex";
+    }
+
+    let close = document.getElementsByClassName("close")[0];
+
+    close.onclick = function () {
+        drop.style.display = "none";
+    }
+</script>
 </body>
 </html>
